# paypoc

./: .gitignore  README.md
datasets/: requirements.txt  seed_data.py
docs/: AUTH0_MINIKUBE_CONFIG.md  AUTH0_SETUP.md  MINIKUBE_TLS_SETUP.md  architecture.md  auth0-configuration.md  catalog_and_inventory_system_design_plan.md  invariants.md  plan.md  testing-guide.md  user_system_flow.md
kubernetes/: README.md
scripts/: .env.example  DEPLOYMENT.md  Dockerfile.ledger  Dockerfile.payments  ca.crt  deploy.sh  (+4 more)
services/catalog/: .dockerignore  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
services/catalog/alembic/: env.py
services/catalog/alembic/versions/: 001_create_products_and_categories_tables.py  002_seed_common_categories.py  003_add_product_inventory_table.py
services/catalog/app/: config.py  main.py
services/catalog/app/api/: categories.py  health.py  images.py  products.py
services/catalog/app/auth/: __init__.py  dependencies.py  jwt_validator.py  jwt_validator_simple.py
services/catalog/app/db/: database.py
services/catalog/app/kafka/: __init__.py  inventory_consumer.py  producer.py
services/catalog/app/models/: __init__.py  category.py  product.py  product_inventory.py
services/catalog/app/schemas/: __init__.py  category.py  product.py
services/catalog/app/services/: __init__.py  category_service.py  cloudflare_images.py  inventory_client.py  product_service.py  seller_service.py
services/catalog/app/services/image_providers/: __init__.py  base.py  cloudflare_provider.py  cloudinary_provider.py
(+502 files in other folders)
