[project]
name = "catalog-service"
version = "1.0.0"
description = "Product catalog management and browsing for BuyIt platform"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and web framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    # Database
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "asyncpg==0.29.0",
    # Authentication
    "PyJWT[crypto]==2.8.0",
    "cryptography==42.0.0",
    "requests==2.31.0",
    # Kafka
    "confluent-kafka==2.3.0",
    # Cloudinary (active image provider)
    "cloudinary==1.36.0",
    # Validation and serialization
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    # Utilities
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

